[package]
name = "rustylist"
version = "0.1.0"
authors = ["Alejandro Wainzinger <aikawarazuni@gmail.com>"]

[dependencies]
iron = "*"
router = "*"
diesel = "0.5.0"
diesel_codegen = { version = "0.5.0", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
